--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1>Histori Keluarga</h1>
       <div class="keluarga-img">
         <img src="gambar/img-avatar-pria.jpg" alt="Logo SMP" />
-        <p><h3>Sekolah Menengah Pertama</h3></p>
+        <p><h3>Anak ke-2</h3></p>
         <p>Saya, Diaz Adriansyah, merupakan anak kedua dari tiga bersaudara dalam keluarga kami. Di tengah posisi sebagai anak tengah, saya tumbuh dalam lingkungan yang seimbang, di mana saya belajar banyak dari kakak dan juga menjaga adik. Keluarga kami selalu menjunjung tinggi nilai kebersamaan, tanggung jawab, dan saling mendukung.</p>
       </div>
     </div>
